force-app/main/default/objects/Int_ICV_Default__c/Int_ICV_Default__c.object-meta.xml
<CustomObject>
    
    <label>Int ICV Default</label>
    <nameField>
        <displayFormat>DFLT-{00000000}</displayFormat>
        <label>Int ICV Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int ICV Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>