force-app/main/default/objects/Int_ICV_Default__c/fields/Le_Accrual_Flag__c.field-meta.xml
<CustomField>
    <fullName>Le_Accrual_Flag__c</fullName>
    <label>Le Accrual Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>