force-app/main/default/objects/Int_ICV_Default__c/fields/LE_Source_System__c.field-meta.xml
<CustomField>
    <fullName>LE_Source_System__c</fullName>
    <label>LE Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>