force-app/main/default/objects/Int_ICV_Default__c/fields/Le_Source_System_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Le_Source_System_Key_Value__c</fullName>
    <label>Le Source System Key Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>