force-app/main/default/objects/Int_ICV_Default__c/fields/Party_Source_System_Key_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Source_System_Key_Name__c</fullName>
    <label>Party Source System Key Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>