force-app/main/default/objects/Int_ICV_Default__c/fields/Party_Source_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Source_System_Name__c</fullName>
    <label>Party Source System Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>