force-app/main/default/objects/Int_ICV_Default__c/fields/Probability_of_Default__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Default__c</fullName>
    <label>Probability of Default</label>
    <precision>15</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>